# voice_assistant

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  config.py  main.py  pyproject.toml
commands/: command_types.py  creator.py  executor.py  processor.py  recognizer.py
commands/chat_gpt/: config.json
commands/current_time/: config.json  script.py
commands/open_browser/: config.json  script.py
core/: speech_to_text.py  text_to_speech.py  utils.py  voice_assistant.py
